修复WareSkuLockVo属性名不一致问题 优化远程调试配置